# m5-revenue-planning-console

./: .gitignore  README.md  bootstrap.py  pyproject.toml
app/: bootstrap.py  streamlit_app.py
app/pages/: 1_Overview.py  2_Store_Explorer.py  3_Department_Explorer.py  4_Scenario_Lab.py  5_Risk_Planning.py  6_Model_Health.py
artifacts/metadata/: store_dept_train_metrics.json  store_train_metrics.json  top_depts_by_store.json
data/outputs/: actuals_allstores_last_90.parquet
forecasts/: store_dept_top5_latest.parquet  store_latest.parquet
src/m5rpc/config/: settings.py
src/m5rpc/features/: build_store_dept_features.py  build_store_features.py  feature_builder.py
src/m5rpc/ingest/: load_raw.py  reshape_sales.py
src/m5rpc/modeling/: train_store.py  train_store_dept.py
src/m5rpc/scenarios/: scenario_engine.py
src/m5rpc/scoring/: export_actuals_for_app.py  score_store.py  score_store_dept.py
src/m5rpc/transform/: aggregate.py  build_revenue_table.py  join_calendar.py  join_prices.py
